--- a/platformio.ini
+++ b/platformio.ini
@@ -108,7 +108,8 @@ build_flags =
   -D DECODE_SAMSUNG=true
   -D DECODE_LG=true
   -DWLED_USE_MY_CONFIG
-  ; -D USERMOD_SENSORSTOMQTT
+  -D USERMOD_MQTT_HA
+  -D USERMOD_AUTO_SAVE
 
 build_unflags =
 
@@ -164,9 +165,9 @@ framework = arduino
 board_build.flash_mode = dout
 monitor_speed = 115200
 # slow upload speed (comment this out with a ';' when building for development use)
-upload_speed = 115200
+;  upload_speed = 115200
 # fast upload speed (remove ';' when building for development use)
-; upload_speed = 921600
+upload_speed = 921600
 
 # ------------------------------------------------------------------------------
 # LIBRARIES: required dependencies
